Add: Copies and features like carousel

--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
   "dependencies": {
     "@astrojs/react": "^3.0.8",
     "@astrojs/tailwind": "^5.0.3",
+    "@heroicons/react": "^2.1.1",
     "@material-tailwind/react": "^2.1.8",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
     "astro": "^4.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tailwindcss": "^3.3.3"
+    "react-multi-carousel": "^2.8.4",
+    "tailwindcss": "^3.3.3",
+    "uninstall": "^0.0.0"
   }
 }
