--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/react": "^3.0.8",
     "@astrojs/tailwind": "^5.0.3",
+    "@astrojs/vercel": "^7.3.0",
     "@heroicons/react": "^2.1.1",
     "@material-tailwind/react": "^2.1.8",
     "@types/react": "^18.2.45",
