--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/node": "^8.2.3",
     "@astrojs/react": "^3.0.8",
     "@astrojs/tailwind": "^5.0.3",
     "@astrojs/vercel": "^7.3.0",
+    "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
     "@material-tailwind/react": "^2.1.8",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
     "astro": "^4.0.6",
+    "astro-i18next": "1.0.0-beta.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-multi-carousel": "^2.8.4",
