--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/react-dom": "^18.2.18",
     "astro": "^4.0.6",
     "astro-i18next": "1.0.0-beta.21",
+    "country-flag-icons": "^1.5.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-multi-carousel": "^2.8.4",
